<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".casos_uso.SignUp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/pagina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/paquete_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/forma"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="210dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/btn_registro"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/info_dark"
                        android:contentDescription="@string/info_registro"
                        android:onClick="lanzarInfo" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paquete_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/formulario"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/paquete_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="25dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/et_email"
                        app:srcCompat="@drawable/icon_user_primary" />

                    <EditText
                        android:id="@+id/et_em_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/et_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/primary_text_light_nodisable"
                        android:textColorHint="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/paquete_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/et_contraseña"
                        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

                    <EditText
                        android:id="@+id/et_pass_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/et_contraseña"
                        android:inputType="textPassword"
                        android:textColor="@android:color/primary_text_light_nodisable"
                        android:textColorHint="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/paquete_verificar_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/et_contraseña"
                        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

                    <EditText
                        android:id="@+id/et_pass_verify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/et_contraseña_verify"
                        android:inputType="textPassword"
                        android:textColor="@android:color/primary_text_light_nodisable"
                        android:textColorHint="@color/colorPrimary" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/paquete_botones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/paquete_registro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginEnd="60dp"
                        android:background="@drawable/boton_iniciosesion"
                        android:fontFamily="@font/poppins_medium"
                        android:onClick="onClick"
                        android:text="@string/btn_registro" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/paquete_google"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btn_google"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"

                        android:layout_marginRight="60dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"

                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_RegistrarseMensaje"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/et_MensajeInicioSesion"
                        android:textColor="#959595" />

                    <TextView
                        android:id="@+id/tv_Registrarse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/et_MensajeCuentaLink"
                        android:textColor="#8E8282" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>